# Notifications

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.py  requirements.txt
.github/workflows/: 01-setup-project.yaml
accounts/: adapters.py  signals.py
api/v1/routers/: users.py
auth/: user_token.py
core/: config.py  idempotency.py  models.py  rate_limit.py
core/migrations/: 0001_initial.py
domain/models/: template.py
models/: users.py
notifications/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
notifications/providers/: base.py  email.py  sms.py  webhook.py
notifications/services/: dispatcher.py  payload.py
schemas/: token_schema.py  user.py  user_schema.py
shared/db/: async_session.py  base.py  lifespan.py  session.py
shared/utils/: stripe_api.py
templates/: base.html  error.html  home.html  index.html
templates/account/: login.html  signup.html
templates/account/email/: base_notification.txt  email_confirmation_message.txt  password_reset_key_message.txt
templates/base/: base.html
templates/registration/: login.html
